--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://fabian3425.github.io/fabianvelez.github.io/image/pokeball.png">
-    <link rel="stylesheet" href="https://fabian3425.github.io/fabianvelez.github.io/css/style.css">
+    <link rel="icon" type="image/png" href="https://fabian3425.github.io/pokemon-api/image/pokeball.png">
+    <link rel="stylesheet" href="https://fabian3425.github.io/pokemon-api/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header_container">
-            <img class="logo" src="https://fabian3425.github.io/fabianvelez.github.io/image/pokemon-logo.png" alt="Pokemon Logo">
+            <img class="logo" src="https://fabian3425.github.io/pokemon-api/image/pokemon-logo.png" alt="Pokemon Logo">
         </div>
     </header>
     <main>
@@ -25,7 +25,7 @@
     </main>
     <footer class="footer">
         <div class="footer_container">Pokemon</div></footer>
-    <script type="text/javascript" src="https://fabian3425.github.io/fabianvelez.github.io/js/getPokemon.js"></script>
-    <script type="text/javascript" src="https://fabian3425.github.io/fabianvelez.github.io/js/main.js"></script>
+    <script type="text/javascript" src="https://fabian3425.github.io/pokemon-api/js/getPokemon.js"></script>
+    <script type="text/javascript" src="https://fabian3425.github.io/pokemon-api/js/main.js"></script>
 </body>
 </html>
